Dev-RBI/src/objects/Project_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Hyperlink__c</fullName>
        <description>This field is used in the related list of the project for the hyperlink</description>
        <formula>HYPERLINK(&quot;/&quot; + Id,  List_of_Values_Id__r.Name, &quot;_blank&quot; )</formula>
        <label>Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Values_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Project Feedbacks</relationshipLabel>
        <relationshipName>Project_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjFeedUniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProjFeedUniqueKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Project__c</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Strores relationship with Project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Project_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark_Type__c</fullName>
        <formula>List_of_Values_Id__r.Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remark Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>List_of_Values_Id__r.Entity_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Feedback_Unique_Key__c</fullName>
        <formula>LOWER( List_of_Values_Id__r.Name  &amp;  Visit__r.Name  )</formula>
        <label>Visit Feedback Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <formula>Visit__c</formula>
        <label>Visit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Project_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Feedback</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Id_Should_Not_be_blank_for_PMS_V</fullName>
        <active>true</active>
        <description>Project ID field should be blank for all the entities associated with PMS Visit</description>
        <errorConditionFormula>AND( 
  NOT(ISBLANK( Project_Id__c )),
  NOT(ISBLANK( Visit__c))
  
)</errorConditionFormula>
        <errorMessage>Please ensure that either Project Id or Visit Id is blank!</errorMessage>
    </validationRules>
</CustomObject>